# ExpressionParser

./: CMakeLists.txt  average.h  division.h  exponentiation.h  expression.h  input.txt  literal.h  maximum.h  minimum.h  minus.h  multiply.h  operand.cpp  operand.h  parse.cpp  parse.h  plus.h  project2.cpp  quaternary.h  remainder.h  subexpression.cpp  subexpression.h  symboltable.cpp  symboltable.h  ternary.h  unary.h  variable.cpp  variable.h  variableinitializationexception.h
